--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "mysql2": "^3.6.0"
   }
 }
